# PhoneToolbox

./: CMakeLists.txt
resources/: resources.qrc
src/: main.cpp
src/core/: adb_embedded.cpp  adb_embedded.h  device_detector.cpp  device_detector.h  device_info.cpp  device_info.h  restart_tool.cpp  restart_tool.h
src/core/modes/: edl_9008.cpp  edl_9008.h  mtk_da.cpp  mtk_da.h  normal_mode.cpp  normal_mode.h
src/ui/: device_info_panel.cpp  device_info_panel.h  device_widget.cpp  device_widget.h  info_panel.cpp  info_panel.h  main_window.cpp  main_window.h  output_panel.cpp  output_panel.h  tool_panel.cpp  tool_panel.h
